// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-label Should render label with required false and colon false 1`] = `
<mg-label>
  <!---->
  <label class="mg-label">
    mg-label
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required false and colon true 1`] = `
<mg-label>
  <!---->
  <label class="mg-label">
    mg-label
    :
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required true and colon false 1`] = `
<mg-label>
  <!---->
  <label class="mg-label">
    mg-label
    <span aria-hidden="true">
      *
    </span>
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required true and colon true 1`] = `
<mg-label>
  <!---->
  <label class="mg-label">
    mg-label
    <span aria-hidden="true">
      *
    </span>
    :
  </label>
</mg-label>
`;
